--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="xposeddescription">启用MIUI中被隐藏的波浪充电动画。</string>
+    <string name="xposeddescription">为MIUI，Android 11及以上启用被隐藏的波浪充电动画。</string>
 </resources>
