--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">WaveCharge</string>
-    <string name="xposeddescription">Enable the wave charge animation in MIUI.</string>
+    <string name="xposeddescription">Enable the wave charge animation for MIUI, Android 11 and above.</string>
 </resources>
